--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.16.3",
+    "json-parser": "^1.1.5",
+    "jsonwebtoken": "^8.2.2",
+    "passport": "^0.4.0",
     "request": "^2.81.0"
   },
   "devDependencies": {
